feat(api-schema): add friends API specs + regenerate code
