# generated/users/interfaces/server/server.gen.go
@@ -17,6 +17,14 @@ type Server interface {
 	GetUserByID(ctx context.Context, req *client.GetUserByIDRequest) (*client.GetUserByIDResponse, error)
 	ListSessions(ctx context.Context, req *client.ListSessionsRequest) (*client.ListSessionsResponse, error)
 	DeleteSession(ctx context.Context, req *client.DeleteSessionRequest) (*client.DeleteSessionResponse, error)
+	SendFriendRequest(ctx context.Context, req *client.SendFriendRequestRequest) (*client.SendFriendRequestResponse, error)
+	ListIncomingRequests(ctx context.Context, req *client.ListIncomingRequestsRequest) (*client.ListIncomingRequestsResponse, error)
+	AcceptFriendRequest(ctx context.Context, req *client.AcceptFriendRequestRequest) (*client.AcceptFriendRequestResponse, error)
+	DeclineFriendRequest(ctx context.Context, req *client.DeclineFriendRequestRequest) (*client.DeclineFriendRequestResponse, error)
+	ListFriends(ctx context.Context, req *client.ListFriendsRequest) (*client.ListFriendsResponse, error)
+	RemoveFriend(ctx context.Context, req *client.RemoveFriendRequest) (*client.RemoveFriendResponse, error)
+	ListOutgoingRequests(ctx context.Context, req *client.ListOutgoingRequestsRequest) (*client.ListOutgoingRequestsResponse, error)
+	CancelFriendRequest(ctx context.Context, req *client.CancelFriendRequestRequest) (*client.CancelFriendRequestResponse, error)
 	GetJwks(ctx context.Context, req *client.GetJwksRequest) (*client.GetJwksResponse, error)
 	HealthCheck(ctx context.Context, req *client.HealthCheckRequest) (*client.HealthCheckResponse, error)
 }
